# flake-templates

./: flake.nix
cpp-cmake/: CMakeLists.txt  default.nix  flake.nix  shell.nix
cpp-cmake/docs/: CMakeLists.txt  Doxyfile.in
cpp-cmake/src/: main.cpp
latex-beamer/: .latexmkrc  beamercolorthemepribxxi.sty  beamerinnerthemepribxxi.sty  beamerouterthemepribxxi.sty  beamerthemePribXXI.sty  flake.nix  main.tex
latex-coursework/: .gitignore  .latexmkrc  flake.nix  main.tex
